--- a/app/src/main/res/layout-land/fragment_rooms.xml
+++ b/app/src/main/res/layout-land/fragment_rooms.xml
@@ -39,109 +39,109 @@
 
         </RelativeLayout>
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="@dimen/dimen_10dp"
-            android:layout_weight="0.7"
-            android:background="@color/color_a5a6a8"
-            android:paddingLeft="@dimen/dimen_10dp"
-            android:paddingRight="@dimen/dimen_10dp">
+        <!--<RelativeLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:layout_marginLeft="@dimen/dimen_10dp"-->
+        <!--android:layout_weight="0.7"-->
+        <!--android:background="@color/color_a5a6a8"-->
+        <!--android:paddingLeft="@dimen/dimen_10dp"-->
+        <!--android:paddingRight="@dimen/dimen_10dp">-->
 
-            <TextView
-                android:id="@+id/roomNameTv"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dimen_20dp"
-                android:gravity="center"
-                android:text="@string/roomName"
-                android:textSize="@dimen/dimen_20sp"
-                android:textStyle="bold" />
+        <!--<TextView-->
+        <!--android:id="@+id/roomNameTv"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginTop="@dimen/dimen_20dp"-->
+        <!--android:gravity="center"-->
+        <!--android:text="@string/roomName"-->
+        <!--android:textSize="@dimen/dimen_20sp"-->
+        <!--android:textStyle="bold" />-->
 
-            <TextView
-                android:id="@+id/titleTv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/roomNameTv"
-                android:gravity="left"
-                android:text="@string/title"
-                android:textSize="@dimen/dimen_20sp"
-                android:textStyle="bold" />
+        <!--<TextView-->
+        <!--android:id="@+id/titleTv"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_below="@id/roomNameTv"-->
+        <!--android:gravity="left"-->
+        <!--android:text="@string/title"-->
+        <!--android:textSize="@dimen/dimen_20sp"-->
+        <!--android:textStyle="bold" />-->
 
-            <EditText
-                android:id="@+id/titleEt"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/titleTv"
-                android:imeOptions="actionNext"
-                android:inputType="text" />
+        <!--<EditText-->
+        <!--android:id="@+id/titleEt"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_below="@id/titleTv"-->
+        <!--android:imeOptions="actionNext"-->
+        <!--android:inputType="text" />-->
 
-            <TextView
-                android:id="@+id/descriptionTv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/titleEt"
-                android:gravity="left"
-                android:text="@string/description"
-                android:textSize="@dimen/dimen_20sp"
-                android:textStyle="bold" />
+        <!--<TextView-->
+        <!--android:id="@+id/descriptionTv"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_below="@id/titleEt"-->
+        <!--android:gravity="left"-->
+        <!--android:text="@string/description"-->
+        <!--android:textSize="@dimen/dimen_20sp"-->
+        <!--android:textStyle="bold" />-->
 
-            <EditText
-                android:id="@+id/descriptionEt"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/descriptionTv"
-                android:imeOptions="actionNext"
-                android:inputType="text" />
+        <!--<EditText-->
+        <!--android:id="@+id/descriptionEt"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_below="@id/descriptionTv"-->
+        <!--android:imeOptions="actionNext"-->
+        <!--android:inputType="text" />-->
 
-            <TextView
-                android:id="@+id/emailTv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/descriptionEt"
-                android:gravity="left"
-                android:text="@string/email"
-                android:textSize="@dimen/dimen_20sp"
-                android:textStyle="bold" />
+        <!--<TextView-->
+        <!--android:id="@+id/emailTv"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_below="@id/descriptionEt"-->
+        <!--android:gravity="left"-->
+        <!--android:text="@string/email"-->
+        <!--android:textSize="@dimen/dimen_20sp"-->
+        <!--android:textStyle="bold" />-->
 
-            <EditText
-                android:id="@+id/emailEt"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/emailTv"
-                android:imeOptions="actionDone"
-                android:inputType="textEmailAddress" />
+        <!--<EditText-->
+        <!--android:id="@+id/emailEt"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_below="@id/emailTv"-->
+        <!--android:imeOptions="actionDone"-->
+        <!--android:inputType="textEmailAddress" />-->
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dimen_20dp"
-                android:layout_below="@id/emailEt">
+        <!--<RelativeLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginTop="@dimen/dimen_20dp"-->
+        <!--android:layout_below="@id/emailEt">-->
 
-                <Button
-                    android:id="@+id/book"
-                    android:layout_width="@dimen/dimen_200dp"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_marginLeft="@dimen/dimen_50dp"
-                    android:background="@color/color_f7f7f7"
-                    android:text="@string/book"
-                    android:textAllCaps="false" />
+        <!--<Button-->
+        <!--android:id="@+id/book"-->
+        <!--android:layout_width="@dimen/dimen_200dp"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentLeft="true"-->
+        <!--android:layout_marginLeft="@dimen/dimen_50dp"-->
+        <!--android:background="@color/color_f7f7f7"-->
+        <!--android:text="@string/book"-->
+        <!--android:textAllCaps="false" />-->
 
-                <Button
-                    android:id="@+id/reset"
-                    android:layout_width="@dimen/dimen_200dp"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginRight="@dimen/dimen_50dp"
-                    android:background="@color/color_f7f7f7"
-                    android:text="@string/reset"
-                    android:textAllCaps="false" />
+        <!--<Button-->
+        <!--android:id="@+id/reset"-->
+        <!--android:layout_width="@dimen/dimen_200dp"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentRight="true"-->
+        <!--android:layout_marginRight="@dimen/dimen_50dp"-->
+        <!--android:background="@color/color_f7f7f7"-->
+        <!--android:text="@string/reset"-->
+        <!--android:textAllCaps="false" />-->
 
-            </RelativeLayout>
+        <!--</RelativeLayout>-->
 
 
-        </RelativeLayout>
+        <!--</RelativeLayout>-->
 
     </LinearLayout>
 
