--- a/app/src/main/res/layout/rooms_single_row.xml
+++ b/app/src/main/res/layout/rooms_single_row.xml
@@ -21,15 +21,15 @@
             android:textSize="@dimen/dimen_18sp"
             android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/heading_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+        <!--<TextView-->
+            <!--android:id="@+id/heading_tv"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content" />-->
 
-        <TextView
-            android:id="@+id/sub_heading_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+        <!--<TextView-->
+            <!--android:id="@+id/sub_heading_tv"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content" />-->
 
     </LinearLayout>
 </android.support.v7.widget.CardView>
