--- a/app/src/main/res/layout/rooms_single_row.xml
+++ b/app/src/main/res/layout/rooms_single_row.xml
@@ -14,22 +14,23 @@
         android:layout_margin="10dp"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/label_tv"
+        <!--<TextView-->
+        <!--android:id="@+id/label_tv"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:textSize="@dimen/dimen_18sp"-->
+        <!--android:textStyle="bold" />-->
+
+        <RadioButton
+            android:id="@+id/rbtn_room_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:clickable="false"
+            android:focusable="false"
+            android:paddingLeft="@dimen/dimen_20dp"
             android:textSize="@dimen/dimen_18sp"
             android:textStyle="bold" />
 
-        <!--<TextView-->
-            <!--android:id="@+id/heading_tv"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content" />-->
-
-        <!--<TextView-->
-            <!--android:id="@+id/sub_heading_tv"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content" />-->
 
     </LinearLayout>
 </android.support.v7.widget.CardView>
