Added Dialog and current day time selection functionality.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -33,4 +33,5 @@
     <color name="color_E0C561">#E0C561</color>
     <color name="color_D65A5B">#D65A5B</color>
     <color name="color_f7f7f7">#f7f7f7</color>
+    <color name="color_000000">#000000</color>
 </resources>
