--- a/app/src/main/res/layout-land/fragment_single_day.xml
+++ b/app/src/main/res/layout-land/fragment_single_day.xml
@@ -4,40 +4,39 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
+    <!--<TextView
         android:id="@+id/dateTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/dimen_20dp"
         android:gravity="left"
-        android:text="@string/date"
+        android:text="@string/dateEvent"
         android:textSize="@dimen/dimen_20sp"
-        android:textStyle="bold" />
+        android:textStyle="bold" />-->
 
-    <View
+    <!--<View
         android:id="@+id/divider"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dimen_2dp"
         android:layout_below="@id/dateTv"
         android:layout_marginTop="@dimen/dimen_10dp"
-        android:background="@color/color_000000" />
+        android:background="@color/color_000000" />-->
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/unmarked_rooms_rv"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/divider" />
+        android:layout_height="wrap_content" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
-        android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_marginBottom="@dimen/dimen_20dp"
         android:layout_marginRight="@dimen/dimen_20dp"
-        android:src="@android:drawable/ic_menu_add" />
+        android:src="@android:drawable/ic_menu_add"
+        android:visibility="gone" />
 
 </RelativeLayout>
