--- a/app/src/main/res/layout/unmarked_rooms_single_row.xml
+++ b/app/src/main/res/layout/unmarked_rooms_single_row.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/timeTv"
+            android:id="@+id/time_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/dimen_10dp"
@@ -20,7 +20,7 @@
             android:layout_width="@dimen/dimen_2dp"
             android:layout_height="@dimen/dimen_50dp"
             android:layout_marginLeft="@dimen/dimen_5dp"
-            android:layout_toRightOf="@id/timeTv"
+            android:layout_toRightOf="@id/time_tv"
             android:background="@color/color_000000" />
 
         <LinearLayout
